tdf#92386: Writer crashes in print preview if document in 2 windows

2 changes for the 2 following bts
First bt: see https://bugs.documentfoundation.org/attachment.cgi?id=116883
Second bt: see https://bugs.documentfoundation.org/attachment.cgi?id=116888

Reviewed-on: https://gerrit.libreoffice.org/16557
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit cb813b392d1f59ad8927b87e899d8a33d1db2504)

Change-Id: I92ed3b7305bb5b714532f2dcffd615a8337db8b6